bug fix ios call out container class to allow main image to show on ios.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 .container-wrapper {}
 
 .container-wrapper--red {
-    background-color:#444;
+    background-color:rgb(97, 107, 99, 0.7);
     color:white;
 }
 
@@ -206,5 +206,27 @@ color: #609a6a;
     .callout-container {
         background-attachment: fixed;
         -webkit-background-attachment: fixed;
+    }
+}
+
+/* Workaround for iOS devices */
+@supports (-webkit-touch-callout: none) {
+    .callout-container {
+        background: url('images/moors.jpg') no-repeat center center;
+        background-size: cover;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .callout-container::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background: url('images/moors.jpg') no-repeat center center fixed;
+        background-size: cover;
+        z-index: -1;
     }
 }
